# takucrypt

./: README.md  main.py  pyproject.toml  setup.py  test_takucyrpt.py
.github/workflows/: workflow.yml
takucyrpt/: __init__.py  data.py
